[package]
name = "bilge"
authors = ["Hecatia Elegua"]
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include = ["src/lib.rs", "LICENSE-*", "README.md"]

[workspace]
members = ["bilge-impl"]

[workspace.package]
version = "0.1.1"
categories = ["data-structures", "no-std::no-alloc", "embedded", "rust-patterns"]
description = "Use bitsized types as if they were a feature of rust."
documentation = "https://docs.rs/bilge"
edition = "2021"
keywords   = ["bilge", "bitfield", "bits", "register"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hecatia-elegua/bilge"


[features]
default = []
# Enables constness, see README.md for the specific nightly version
nightly = ["arbitrary-int/nightly", "bilge-impl/nightly"]

[dependencies]
# cargo clippy workaround, we can't add `path = "../arbitrary-int"` as well
arbitrary-int = { version = "1.2.4" }
bilge-impl = { version = "=0.1.1", path = "bilge-impl" }

[dev-dependencies]
trybuild = "1.0"
# examples
volatile = { git = "https://github.com/theseus-os/volatile" }
zerocopy = "0.5.0"
# benches
criterion = "0.3"
modular-bitfield = "0.11.2"
bitbybit = "1.1.4"
# deku = "0.16"

# criterion workaround to make `cargo bench -- --verbose` work
[lib]
bench = false

[[bench]]
name = "compared"
# cargo publish workaround "can't find `compared` bench at ... `benches\compared\main.rs`"
path = "benches/compared/main.rs"
harness = false
