[package]
name = "bilge-impl"
authors = ["Hecatia Elegua"]
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
default = []
# Enables constness, see README.md for the specific nightly version
nightly = []
serde = ["dep:serde"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = { version = "1.0", default-features = false }
itertools = "0.11.0"
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
syn-path = "2.0"
